--- a/juniortech/src/styles.css
+++ b/juniortech/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: 'Poppins', sans-serif;
+  }
+
+  body {
+    background: #63a2d3;
+    background: -webkit-linear-gradient(to right, #000000, #bdc3c7);
+    background: linear-gradient(to right, #010f06, #657a71);
+    color: rgb(173, 180, 179);
+    margin: auto;
+    max-width: 100%;
+    overflow-x: hidden;
+    font-family: 'Poppins', sans-serif;
+    /*cursor: url('img/Cursor/sable.png'), auto;*/
+  }
