Imagenes de miembros con link

--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <div class="img-container">
                     <a href="https://github.com/MarianelaPurretta" target="_blank"><img
-                            src="img/Miembros/MARIANELA-modified.png" /></a>
+                            src="../../../assets/images/miembros/MARIANELA-modified.png" /></a>
 
                 </div>
                 <h3>Marianela Purretta</h3>
@@ -27,7 +27,7 @@
             <div class="card">
                 <div class="img-container">
                     <a href="https://github.com/PaganoFranco" target="_blank"><img
-                            src="img/Miembros/FRANCO-modified.png" /></a>
+                            src="../../../assets/images/miembros/FRANCO-modified.png" /></a>
                 </div>
                 <h3>Franco Pagano</h3>
                 <p>Programador | Profesor tecnológico | Ingeniero en casi todo</p>
@@ -46,7 +46,7 @@
             <div class="card">
                 <div class="img-container">
                     <a href="https://github.com/NelsonLassa" target="_blank"><img
-                            src="img/Miembros/NELSON-modified.png" /></a>
+                            src="../../../assets/images/miembros/NELSON-modified.png" /></a>
                 </div>
                 <h3>Nelson Lassa</h3>
                 <p>Programador | SCRUM MASTER | Todologo en todo (Agrega funcionalidades hasta el psint)</p>
@@ -65,7 +65,7 @@
             <div class="card">
                 <div class="img-container">
                     <a href="https://github.com/joaquin9830" target="_blank"><img
-                            src="img/Miembros/JOAQUIN-modified.png" /></a>
+                            src="../../../assets/images/miembros/JOAQUIN-modified.png" /></a>
                 </div>
                 <h3>Joaquín Viñolo</h3>
                 <p>Programador | Criminalista | El pizzero del grupo (levadura fresca si o si)</p>
@@ -84,7 +84,7 @@
             <div class="card">
                 <div class="img-container">
                     <a href="https://github.com/yunesyamil" target="_blank"><img
-                            src="img/Miembros/YAMIL-modified.png" /></a>
+                            src="../../../assets/images/miembros/YAMIL-modified.png" /></a>
                 </div>
                 <h3>Yamil Yunes</h3>
                 <p>Programador | Profesor | El administrador de base de datos</p>
@@ -103,7 +103,7 @@
             <div class="card">
                 <div class="img-container">
                     <a href="https://github.com/Maujj1999" target="_blank"><img
-                            src="img/Miembros/MAURO-modified.png" /></a>
+                            src="../../../assets/images/miembros/MAURO-modified.png" /></a>
                 </div>
                 <h3>Mauro Barroso</h3>
                 <p>Programador | Te aumenta la nafta en YPF | Experto en fulbito</p>
