--- a/juniortech/src/app/components/header/header.component.css
+++ b/juniortech/src/app/components/header/header.component.css
@@ -12,6 +12,16 @@ header {
   
   
   /*Banner*/
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+
   #Banner {
     position: relative;
     height: 100vh;
