--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -63,10 +63,15 @@
         </div>
     </nav>
 </section>
-<!--Banner-->
+<section>
+    <app-carousel></app-carousel>
+</section>
+<!--Banner
+
 <section id="Banner">
     <div class="banner-content">
         <h1 class="animate-text">Bienvenidos a Junior Tech Troopers</h1>
         <a href="#Conocenos" class="btn btn-success">Conócenos</a>
     </div>
 </section>
+-->
