--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -15,15 +15,23 @@
     <div class="carousel-item">
       <img src="../../../assets/images/banner/Banner.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-        <h5 class="carousel-title">Second slide label</h5>
-        <a href="#Conocenos" class="btn btn-success mt-3">Conócenos</a>
+        <h1 class="animate-text">¿Ya viste nuestro último video?</h1>
+        <h5 class="carousel-title">Corré a ver nuestro último video de Proyecto Python!!</h5>
+        <div class="card mt-3 animated-card">
+          <img src="../../../assets/gif/gif.gif" class="card-img-top" alt="Card image">
+          <div class="card-body">
+            
+          </div>
+        </div>        
+        <a href="https://www.youtube.com/watch?v=TMBL6uw-nCQ&t=13s" class="btn btn-success mt-3" target="_blank">Ver ahora</a>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../../../assets/images/banner/Banner.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-        <h5 class="carousel-title">Third slide label</h5>
-        <a href="#Conocenos" class="btn btn-success mt-3">Conócenos</a>
+        <h1 class="animate-text">Novedades!!</h1>
+        <h5 class="carousel-title">Nuevo chatbot disponible en nuestra página</h5>
+        <a href="#Conocenos" class="btn btn-success mt-3">Probar ahora</a>
       </div>
     </div>
   </div>
