--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -56,22 +56,15 @@
                     </ul>
                     <form class="d-flex mt-3" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-success" type="submit">Search</button>
+                        <button class="btn btn-success" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
         </div>
     </nav>
 </section>
+<!--Carousel Banner-->
 <section>
     <app-carousel></app-carousel>
 </section>
-<!--Banner
 
-<section id="Banner">
-    <div class="banner-content">
-        <h1 class="animate-text">Bienvenidos a Junior Tech Troopers</h1>
-        <a href="#Conocenos" class="btn btn-success">Conócenos</a>
-    </div>
-</section>
--->
