Botón de música sin iconos

--- a/juniortech/src/app/app.component.html
+++ b/juniortech/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+<button id="audio-button" (click)="toggleAudio()">
+    <i class="fa" [ngClass]="isPlaying ? 'fa-pause' : 'fa-play'"></i>
+    <span>{{ isPlaying ? 'Pause' : 'Play' }}</span>
+  </button>
+  <audio #audioPlayer>
+    <source src="../assets/audio/Kid Francescoli - _Moon_ (Official Video).mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
