Sección chatbot finalizada | Se debe solucionar el problema del botón

--- a/juniortech/src/app/components/chat-bot/chat-bot.component.html
+++ b/juniortech/src/app/components/chat-bot/chat-bot.component.html
@@ -1,5 +1,7 @@
-<!-- chat-bot.component.html -->
-<div id="chat-bot-container">
-    <h2>Chat Bot</h2>
-    <!-- The chatbot script will be added here -->
+<div id="chat-bot-container" *ngIf="true" >
+    <div class="chatbot-info-box">
+      <img src="../../../assets/images/chatbot/chatbot-icon.jpeg" alt="Chatbot Image" class="chatbot-image">
+      <h3>JUNIOR-GPT</h3>
+      <p>"¡Hola, soy Han Solo! Soy un chatbot entrenado para responder todas tus preguntas sobre el proyecto de Python del grupo Junior Tech Troopers. Haz click en el botón de chatbot para comenzar"</p>
+    </div>
   </div>
