--- a/juniortech/src/app/components/chat-bot/chat-bot.component.html
+++ b/juniortech/src/app/components/chat-bot/chat-bot.component.html
@@ -1,5 +1,5 @@
-<div id="chat-bot-container" *ngIf="true" >
-    <div class="chatbot-info-box">
+<div id="chat-bot-container">
+  <div class="chatbot-info-box">
       <img src="../../../assets/images/chatbot/chatbot-icon.jpeg" alt="Chatbot Image" class="chatbot-image">
       <h3>JUNIOR-GPT</h3>
       <p>"¡Hola, soy Han Solo! Soy un chatbot entrenado para responder todas tus preguntas sobre el proyecto de Python del grupo Junior Tech Troopers. Haz click en el botón de chatbot para comenzar"</p>
