--- a/juniortech/src/app/app.component.css
+++ b/juniortech/src/app/app.component.css
@@ -21,3 +21,36 @@
     font-size: 25px;
     margin-left: 10px;
   }
+
+
+/*Estilos de botón chat-bot*/
+.chat-icon-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+}
+
+.chat-icon {
+  width: 60px; /* Ajusta el tamaño de la imagen según sea necesario */
+  height: 60px; /* Ajusta el tamaño de la imagen según sea necesario */
+  border-radius: 50%; /* Para hacer la imagen redonda */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
+
+.chat-bubble {
+  position: absolute;
+    bottom: 60px; /* Ajusta la distancia desde la parte inferior de la imagen */
+    right: 50px; /* Ajusta la distancia desde la parte derecha de la imagen */
+    display: none;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    white-space: nowrap;
+}
+
+.chat-icon-container:hover .chat-bubble {
+  display: block; /* Mostrar la burbuja de texto al pasar el ratón sobre el contenedor */
+}
