--- a/juniortech/src/app/components/skills/skills.component.html
+++ b/juniortech/src/app/components/skills/skills.component.html
@@ -1,1 +1,16 @@
-<p>skills works!</p>
+<div class="skills-section">
+    <div class="category" *ngFor="let category of skills">
+      <h2 class="category-title">{{ category.name }}</h2>
+      <div class="row">
+        <div class="col-md-3" *ngFor="let skill of category.items">
+          <div class="skill-box">
+            <img [src]="skill.image" alt="{{ skill.name }}" class="skill-image">
+            <div class="skill-level">
+              <i *ngFor="let icon of skill.levelIcons" class="{{ icon }}"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
