Iconos de skills añadidos a la sección skills | Skill finalizada

--- a/juniortech/src/app/components/skills/skills.component.html
+++ b/juniortech/src/app/components/skills/skills.component.html
@@ -1,7 +1,7 @@
 <div class="skills-section">
     <div class="category" *ngFor="let category of skills">
       <h2 class="category-title">{{ category.name }}</h2>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-md-3" *ngFor="let skill of category.items">
           <div class="skill-box">
             <img [src]="skill.image" alt="{{ skill.name }}" class="skill-image">
