--- a/juniortech/src/app/components/skills/skills.component.html
+++ b/juniortech/src/app/components/skills/skills.component.html
@@ -1,3 +1,4 @@
+<section id="Habilidades">
 <div class="skills-section">
     <div class="category" *ngFor="let category of skills">
       <h2 class="category-title">{{ category.name }}</h2>
@@ -13,4 +14,5 @@
       </div>
     </div>
   </div>
+</section>
   
