--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -1,1 +1,28 @@
-<p>projects works!</p>
+ <!--Proyectos-->
+ <section id="Projects" class="projects-section">
+    <h1>Proyectos</h1>
+    <div class="projects-container">
+        <div class="project-box">
+            <img src="img/Proyectos/Trooper.png" alt="Proyecto 1">
+            <div class="project-info">
+                <h3>Trooper Stay Java</h3>
+                <p class="description">Sistema de estadías. Tecnlogías utilizadas:
+                    Java | MySQL | JoptionPane | JoptionPanel
+                </p>
+                <<a href="https://github.com/CodeStrong2023/ProyectoJuniorTechTroopers" class="learn-more"
+                    target="_blank"><button class="btn btn-dark">Saber más</button></a>
+            </div>
+        </div>
+        <div class="project-box">
+            <img src="img/Proyectos/TrooperPython.png" alt="Proyecto 2">
+            <div class="project-info">
+                <h3>Trooper Stay Python</h3>
+                <p class="description">Aplicación de hospedajes.
+                    Tecnologías utilizadas: Python | MySQL | TKinter </p>
+                <a href="https://github.com/CodeStrong2023/ProyectoPythonJuniorTechTroopers" class="learn-more"
+                    target="_blank"><button class="btn btn-dark">Saber más</button></a>
+            </div>
+        </div>
+
+    </div>
+</section>
