Intentando hacer funcionar el formulario

--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="#Projects">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Contacto">Contacto</a>
+                            <a class="nav-link" (click)="contact()">Contacto</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
