--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -1,6 +1,7 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
@@ -18,12 +19,16 @@
         <h1 class="animate-text">¿Ya viste nuestro último video?</h1>
         <h5 class="carousel-title">Corré a ver nuestro último video de Proyecto Python!!</h5>
         <div class="card mt-3 animated-card">
-          <img src="../../../assets/gif/gif.gif" class="card-img-top" alt="Card image">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/TMBL6uw-nCQ?si=jfFZKn-yA8zF2vlE"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <div class="card-body">
-            
+
           </div>
-        </div>        
-        <a href="https://www.youtube.com/watch?v=TMBL6uw-nCQ&t=13s" class="btn btn-success mt-3" target="_blank">Ver ahora</a>
+        </div>
+        <a href="https://www.youtube.com/watch?v=TMBL6uw-nCQ&t=13s" class="btn btn-success mt-3" target="_blank">Ver
+          ahora</a>
       </div>
     </div>
     <div class="carousel-item">
