--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -49,7 +49,7 @@
                             src="../../../assets/images/miembros/NELSON-modified.png" /></a>
                 </div>
                 <h3>Nelson Lassa</h3>
-                <p>Programador | SCRUM MASTER | Todologo en todo (Agrega funcionalidades hasta el psint)</p>
+                <p>Programador | SCRUM MASTER | Todologo en todo (Agrega funcionalidades hasta el pseint)</p>
                 <div class="social-icons">
                     <a href="https://github.com/NelsonLassa" target="_blank"><i class="bi bi-github"></i></a>
                     <a href="https://www.linkedin.com/in/nelson-lassa/" target="_blank"><i
