--- a/juniortech/src/styles.css
+++ b/juniortech/src/styles.css
@@ -16,5 +16,25 @@
   }
 
 
+/*Media querys*/
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
 
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media (max-width: 768px) {
+
+  figure img,
+  figure audio,
+  figure iframe {
+    width: 100%;
+  }
+}
 
