--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -1,8 +1,8 @@
  <!--Acerca de nosotros-->
- <section id="Conocenos">
+ <section id="Conocenos" data-aos="zoom-in-up">
     <h1>Nuestro equipo</h1>
 
-    <div class="row_2">
+    <div class="row_2" data-aos="zoom-in-up">
         <!-- Column 1-->
         <div class="column">
             <div class="card">
