--- a/juniortech/src/app/components/chat-bot/chat-bot.component.html
+++ b/juniortech/src/app/components/chat-bot/chat-bot.component.html
@@ -1,4 +1,4 @@
-<div id="chat-bot-container">
+<div id="chat-bot-container" data-aos="zoom-in-up">
   <div class="chatbot-info-box">
       <img src="../../../assets/images/chatbot/chatbot-icon.jpeg" alt="Chatbot Image" class="chatbot-image">
       <h3>JUNIOR-GPT</h3>
