--- a/juniortech/src/app/components/contactform/contactform.component.html
+++ b/juniortech/src/app/components/contactform/contactform.component.html
@@ -1,4 +1,4 @@
-<section class="contact-form-section" id="Contacto">
+<section class="contact-form-section" id="Contacto" data-aos="zoom-in-up">
   <div class="form-container">
     <h2>Formulario de contacto</h2>
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
