--- a/juniortech/src/app/components/presentation/presentation.component.html
+++ b/juniortech/src/app/components/presentation/presentation.component.html
@@ -1,4 +1,4 @@
-<section id="about-us" class="about-us-section">
+<section id="about-us" class="about-us-section" data-aos="zoom-in-up">
     <h2>Acerca de Nosotros</h2>
     <p>Junior Tech Troopers, estudiantes avanzados de la carrera Tecnicatura en Programación. Nuestro objetivo es
         desarrollar soluciones innovadoras y eficaces mientras nos preparamos para convertirnos en profesionales
