--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -1,5 +1,5 @@
  <!--Proyectos-->
- <section id="Projects" class="projects-section">
+ <section id="Projects" class="projects-section" data-aos="zoom-in-up">
     <h1>Proyectos</h1>
     <div class="projects-container">
         <div class="project-box">
