--- a/juniortech/src/app/components/skills/skills.component.html
+++ b/juniortech/src/app/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section id="Habilidades">
+<section id="Habilidades" data-aos="zoom-in-up">
 <div class="skills-section">
     <div class="category" *ngFor="let category of skills">
       <h2 class="category-title">{{ category.name }}</h2>
