--- a/juniortech/src/styles.css
+++ b/juniortech/src/styles.css
@@ -1,44 +1,59 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global styles and font settings */
 * {
-    font-family: 'Poppins', sans-serif;
-  }
-
-  body {
-    background: #63a2d3;
-    background: -webkit-linear-gradient(to right, #000000, #bdc3c7);
-    background: linear-gradient(to right, #010f06, #657a71);    
-    color: rgb(173, 180, 179);
-    margin: auto;
-    max-width: 100%;
-    overflow-x: hidden;
-    font-family: 'Poppins', sans-serif;
-    cursor: url('../src/assets/iconos/cursor/sable.png'), auto;
-  }
-
-::selection {
-  background-color: #32cd3294; /* Verde */
-  color: #fff; /* Color del texto cuando está seleccionado */
+  font-family: 'Poppins', sans-serif;  
 }
 
-/*Media querys*/
+body {
+  background: linear-gradient(to right, #010f06, #657a71);
+  color: rgb(173, 180, 179);
+  margin: 0; /* Set margin to 0 for consistent behavior */
+  max-width: 100%;
+  overflow-x: hidden; /* Prevent horizontal overflow */
+  font-family: 'Poppins', sans-serif;
+  cursor: url('../src/assets/iconos/cursor/sable.png'), auto;  
+}
+
+/* Selection styles */
+::selection {
+  background-color: #32cd3294; /* Green */
+  color: #fff; /* Text color when selected */
+}
+
+/* Estilo para scrollbar en WebKit */
+::-webkit-scrollbar {
+  width: 10px; /* Ancho de la scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #1b1a1a; /* Color del fondo de la scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del thumb (la parte que puedes arrastrar) */
+  border-radius: 5px; /* Bordes redondeados */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color del thumb al pasar el mouse */
+}
+
+/* Keyframes for animations */
 @keyframes fadeIn {
   0% {
     opacity: 0;
     transform: translateY(-20px);
   }
-
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
+/* Media queries for responsive design */
 @media (max-width: 768px) {
-
   figure img,
   figure audio,
   figure iframe {
     width: 100%;
   }
 }
-
