--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="#Projects">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" (click)="contact()">Contacto</a>
+                            <a class="nav-link" ><span >Contacto</span></a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -56,7 +56,7 @@
                     </ul>
                     <form class="d-flex mt-3" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-success" type="submit">Buscar</button>
+                        <a><button class="btn btn-success" (click)="contact()" type="submit">Buscar</button></a>
                     </form>
                 </div>
             </div>
