--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -19,8 +19,8 @@
                 <h3>Trooper Stay Python</h3>
                 <p class="description">Aplicación de hospedajes.
                     Tecnologías utilizadas: Python | MySQL | TKinter </p>
-                <a href="https://github.com/CodeStrong2023/ProyectoPythonJuniorTechTroopers" class="learn-more"
-                    target="_blank"><button class="btn btn-dark">Saber más</button></a>
+                <a (click)="contacto()" class="learn-more"
+                    target="_blank"><button class="btn btn-dark" >Saber más</button></a>
             </div>
         </div>
         <div class="project-box">
