--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
- <!--Acerca de nosotros-->
- <section id="Conocenos" data-aos="zoom-in-up">
+<!--Acerca de nosotros-->
+<section id="Conocenos" data-aos="zoom-in-up">
     <h1>Nuestro equipo</h1>
 
     <div class="row_2" data-aos="zoom-in-up">
@@ -11,6 +11,7 @@
                             src="../../../assets/images/miembros/MARIANELA-modified.png" /></a>
 
                 </div>
+
                 <h3>Marianela Purretta</h3>
                 <p>Programadora | Fotografa profesional | La mamá del grupo</p>
                 <div class="social-icons">
@@ -54,8 +55,7 @@
                     <a href="https://github.com/NelsonLassa" target="_blank"><i class="bi bi-github"></i></a>
                     <a href="https://www.linkedin.com/in/nelson-lassa/" target="_blank"><i
                             class="bi bi-linkedin"></i></a>
-                    <a href="https://www.instagram.com/nelsonlassa/" target="_blank"><i
-                            class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/nelsonlassa/" target="_blank"><i class="bi bi-instagram"></i></a>
                 </div>
 
             </div>
@@ -90,8 +90,7 @@
                 <p>Programador | Profesor | El administrador de base de datos</p>
                 <div class="social-icons">
                     <a href="https://github.com/yunesyamil" target="_blank"><i class="bi bi-github"></i></a>
-                    <a href="https://www.linkedin.com/in/yunesyamil/" target="_blank"><i
-                            class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/yunesyamil/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     <a href="https://www.instagram.com/yamiljesus_/?hl=es-la" target="_blank"><i
                             class="bi bi-instagram"></i></a>
                 </div>
@@ -109,7 +108,7 @@
                 <p>Programador | Te aumenta la nafta en YPF | Experto en fulbito</p>
                 <div class="social-icons">
                     <a href="https://github.com/Maujj1999" target="_blank"><i class="bi bi-github"></i></a>
-                    
+
                     <a href="https://www.instagram.com/barroso_mauro/?hl=es-la/" target="_blank"><i
                             class="bi bi-instagram"></i></a>
                 </div>
