--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -36,7 +36,7 @@
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <h1 class="animate-text">Novedades!!</h1>
         <h5 class="carousel-title">Nuevo chatbot disponible en nuestra página</h5>
-        <a (click)="chatbot()" class="btn btn-success mt-3">Probar ahora</a>
+        <a (click)="chatbot()"><button class="btn btn-success mt-3">Probar ahora</button></a>
       </div>
     </div>
   </div>
