--- a/juniortech/src/app/components/projects/projects.component.css
+++ b/juniortech/src/app/components/projects/projects.component.css
@@ -75,3 +75,32 @@
   .project-info a.learn-more:hover {
     text-decoration: underline;
   }
+
+  /* Responsivo: Ajustes para pantallas más pequeñas */
+@media (max-width: 768px) {
+  .projects-section h1 {
+    font-size: 24px;
+  }
+
+  .project-info h3 {
+    font-size: 20px;
+  }
+
+  .project-info p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 576px) {
+  .projects-section h1 {
+    font-size: 20px;
+  }
+
+  .project-info h3 {
+    font-size: 18px;
+  }
+
+  .project-info p {
+    font-size: 12px;
+  }
+}
