Corrección de contacto | nuevo botón en sección conocenos

--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <!--Acerca de nosotros-->
 <section id="Conocenos" data-aos="zoom-in-up">
     <h1>Nuestro equipo</h1>
-
+    <button class="btn btn-success mt-3" (click)="contacto()">Contáctanos</button>
     <div class="row_2" data-aos="zoom-in-up">
         <!-- Column 1-->
         <div class="column">
