--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -22,7 +22,7 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/TMBL6uw-nCQ?si=jfFZKn-yA8zF2vlE"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
           <div class="card-body">
 
           </div>
