Botón de carousel contacto

--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -10,7 +10,7 @@
       <img src="../../../assets/images/banner/Banner.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <h1 class="animate-text">Bienvenidos a Junior Tech Troopers</h1>
-        <a href="#Conocenos" class="btn btn-success mt-3">Conócenos</a>
+        <a routerLink="/contact" class="btn btn-success mt-3">Contactanos</a>
       </div>
     </div>
     <div class="carousel-item">
