--- a/juniortech/src/app/components/skills/skills.component.css
+++ b/juniortech/src/app/components/skills/skills.component.css
@@ -1,38 +1,45 @@
-.skills-section {
-    padding: 20px;
-  }
-  .category {
-    margin-bottom: 30px;
-  }
-  .category-title {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .skill-box {
-    text-align: center;
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #000; /* Fondo negro */
-    color: #fff; /* Texto blanco */
-    transition: transform 0.3s ease-in-out; /* Animación de agrandamiento */
-    
-  }
-  .skill-box:hover {
-    transform: scale(1.1); /* Agrandar al hacer hover */
-  }
-  .skill-icon {
-    font-size: 48px; /* Tamaño mediano para los iconos */
-    margin-bottom: 10px;
-    transition: transform 0.3s ease-in-out; /* Animación de agrandamiento */
-  }
-  .skill-icon:hover {
-    transform: scale(1.2); /* Agrandar al hacer hover */
-  }
-  .skill-level {
-    margin-top: 10px;
-  }
-  .skill-level i {
-    margin-right: 5px;
-  }
-  
+.skills-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 20px;
+}
+
+.skill-category {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.skill-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.skill-card {
+  background-color: rgba(0, 0, 0, 0.2); /* Negro transparente */
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  width: 120px; /* Ajusta el tamaño según sea necesario */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.skill-icon {
+  width: 40px; /* Ajusta el tamaño del ícono */
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+h2 {
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+h3 {
+  color: white;
+  font-size: 0.9em;
+}
