--- a/juniortech/src/app/components/header/header.component.html
+++ b/juniortech/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <!--Navbar y header-->
 <section id="Inicio">
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-dark fixed-top navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand" target="_blank" href="https://www.youtube.com/@JuniorTechTroopers">
                 <img src="../../../assets/iconos/icono-nav.png" alt="Logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+            <button class="navbar-toggler navbar-custom" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
