Optimización de imagenes

--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -5,11 +5,11 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/MARIANELA-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/MARIANELA-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
                         <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
@@ -25,10 +25,10 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/JOAQUIN-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/JOAQUIN-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
                         <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
@@ -44,10 +44,10 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/NELSON-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/NELSON-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
                         <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
@@ -63,10 +63,10 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/FRANCO-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/FRANCO-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
                         <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
@@ -82,10 +82,10 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/YAMIL-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/YAMIL-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
                         <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
@@ -101,10 +101,10 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/MAURO-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/MAURO-modified.png">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
                         <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
