--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -5,7 +5,7 @@
     <div class="card">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
-        <span class="card__span">Category</span>
+        <span class="card__span">#Java</span>
       </div>
       <div class="card-int">
         <p class="card-int__title">Project Title</p>
@@ -17,7 +17,7 @@
     <div class="card">
       <div class="card__img">
         <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
-        <span class="card__span">Category</span>
+        <span class="card__span">#Python</span>
       </div>
       <div class="card-int">
         <p class="card-int__title">Project Title</p>
